[metadata]
name = stor
summary = T2STOR stor server
description-file =
    README.rst
author = T2STOR
author-email = t2stor.list@t2cloud.net
home-page = http://www.t2cloud.net
classifier =
    Environment :: T2STOR
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/stor =
        etc/api.conf

packages =
    stor

[entry_points]
console_scripts =
    stor-manage = stor.cmd.manage:main
stor.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = stor/locale
domain = stor

[update_catalog]
domain = stor
output_dir = stor/locale
input_file = stor/locale/stor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stor/locale/stor.pot

[extras]
