[metadata]
name = Athena
summary = Athena portal server
description-file =
    README.rst
author = Athena
author-email = t2stor.list@t2cloud.net
home-page = http://www.t2cloud.net
classifier =
    Environment :: T2STOR
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/dspace =
        etc/dspace/dspace.conf

packages =
    DSpace

[entry_points]
console_scripts =
    DSpace-manage = DSpace.cmd.manage:main
dspace.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = DSpace/locale
domain = DSpace

[update_catalog]
domain = DSpace
output_dir = DSpace/locale
input_file = DSpace/locale/DSpace.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = DSpace/locale/DSpace.pot

[extras]
